test/classes/initializers/generics/param-field-default-value-non-param-config-var.good
param-field-default-value-non-param-config-var.chpl:3: error: default value for param is not a param
